@@ -1,5 +1,7 @@
 package lab5.entity;
 
+import org.apache.commons.lang3.StringUtils;
+
 import lab5.managers.ConsoleManager;
 import lab5.utility.builders.MusicGenreBuilder;
 
@@ -23,7 +25,7 @@ public enum MusicGenre {
         ConsoleManager.println("Список музыкальных жанров: " + MusicGenre.names());
         String genreString = ConsoleManager.askObject();
         MusicGenre genre;
-        if (genreString.isBlank()) {
+        if (StringUtils.isBlank(genreString)) {
             genre = null;
         }
         else {
